--- a/priv/static/less/feed_ui_bt3.less
+++ b/priv/static/less/feed_ui_bt3.less
@@ -98,5 +98,7 @@
 .fd-more-toolbar {
     .text-center();
     .btn-toolbar();
-    & .fb-btn-more{ .btn();.btn-info(); }
+    & .fd-btn-more{
+        .btn(); .btn-lg(); .btn-info();
+    }
 }
