--- a/priv/static/less/feed_ui_bt3.less
+++ b/priv/static/less/feed_ui_bt3.less
@@ -22,7 +22,6 @@
 .fd-ui {}
 .fd-title {
     .make-row();
-    padding:10px;
 
     & .fd-checkbox{
         .checkbox-inline();
@@ -84,11 +83,9 @@
 }
 
 .fd-body{
-    padding-bottom:40px;
     .fd-entry{
+        margin-bottom: 10px;
         .make-row(@gutter: 0px);
-        padding-top:10px;
-        padding-bottom:10px;
         &.warning  { background: @state-warning-bg}
         & .fd-entry-sel{ .make-sm-column(1, @gutter:0px); text-align:center;}
         & .fd-entry-container{ .make-sm-column(11, @gutter:0px); }
