return display:table to the entry

--- a/priv/static/less/feed_ui_bt3.less
+++ b/priv/static/less/feed_ui_bt3.less
@@ -85,6 +85,7 @@
 .fd-body{
     .fd-entry{
         margin-bottom: 10px;
+        .make-row(0);
         &.warning  { background: @state-warning-bg}
         & .fd-entry-sel{ .make-sm-column(1, @gutter:0px); text-align:center;}
         & .fd-entry-container{ .make-sm-column(11, @gutter:0px); }
