--- a/priv/static/less/feed_ui_bt2.less
+++ b/priv/static/less/feed_ui_bt2.less
@@ -1,32 +1,43 @@
+.fd-make-col(@span: 1,@offset:0){
+    .makeColumn(@span);
+    #grid > .fluid > .span(@span);
+    #grid > .fluid > .offset(@offset);
+
+    &:first-child{
+        margin-left:0;
+        #grid > .fluid > .offsetFirstChild(@offset);
+    }
+}
+
 .fd-nostate {}
 .fd-ui {}
 .fd-title {
-    .row-fluid();
+    #grid > .fluid > .row-fluid;
 
-    & .fd-title-i { .span(1); }
+    & .fd-title-i { .fd-make-col(1); }
     & .fd-title-row{
-        .span(11);
+        .fd-make-col(11);
         & .fd-label {
             .text-warning();
         }
         & .fd-alert{}
         & .fd-sel-toolbar{}
         & .fd-btn-delete {
-            .btn(); .btn-default();
+            .btn();
             & .fd-trash {
-                //icon-trash
+                &:before { content: @trash; }
             }
         }
         & .fd-traverse-ctl{
             .pull-right();
             & .fd-btn-next{
-                .btn(); .btn-default();
+                .btn();
                 & .fd-chevron-left{
                     //icon-chevron-left
                 }
             }
             & .fd-btn-prev{
-                .btn(); .btn-default();
+                .btn();
                 & .fd-chevron-right{
                     //icon-chevron-right
                 }
@@ -48,9 +59,9 @@
 }
 .fd-body{
     .fd-entry{
-        .row-fluid();
-        .fd-entry-sel{ .span(1); }
-        .fd-entry-container{ .span(11); }
+        #grid > .fluid > .row-fluid;
+        .fd-entry-sel{ .fd-make-col(1); }
+        .fd-entry-container{ .fd-make-col(11); }
     }
 }
 
