correct close position

--- a/priv/static/less/input_bt2.less
+++ b/priv/static/less/input_bt2.less
@@ -78,6 +78,8 @@
     @item: ~".in-media-@{index}";
     @{item}{
         .fd-make-col(@index);
+        position:relative;
+
         & .close{
             .text-error();
             position:absolute;
